Added Search Module

--- a/ISGECVault/frmVault.resx
+++ b/ISGECVault/frmVault.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABi
-        FAAAAk1TRnQBSQFMAgEBDAEAAYABAAGAAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        FgAAAk1TRnQBSQFMAgEBDgEAAfABAAHwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,7 +153,15 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQAB/wHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wQAAf8B8gG8AZECiwGR
+        AbwB8gH/BgAB/wHyAbwBbgJEAW4BvAHyAf8mAAH/AYsG2wGLAf8GAAH/AR4GFgEeAf8mAAGQAdsG2gHb
+        AZAGAAFFAeMCFwJHAhcB4wFFJQABkALaBrkB9AHaAZAEAAFFAeMBFwZHARcB4wFFIwABvAHaAbkGswL/
+        AbkB2gG8AgABBwHjARcIRwEXAeMBByIAAZABuQOzAdsBugGzAv8CswG5AZACAAFFARcDRwH/AkcB/wNH
+        ARcBRSIAA7MB2wH/AfQD/wWzAgABRgNHAUUE/wFFA0cBRiIAA7MB/wGLArMB9AEJBbMCAAEXBEcBRQL/
+        AUUERwEXIgABugG0AboB/wOzAbQB/wSzAbQCAAFvBBcE/wRHAW8iAAGQAboBtAH/A7QBCQHxBLMBkAIA
+        AUUD4wFFAf8CRQH/AUUCFwFHAUUiAAG8AQkBugH0Af8B3AEJAf8DtAGzAdwBvAIAAQcBlAPjAUUC4wFF
+        AxcBFgEHIwABkAEJAboBvAH/AfQBkQG6ArQB3AGQBAABRQGUAxYF4wEWAUUlAAG0AQkB3AG6AtsCugEJ
+        AbQGAAFvAb0BlAUWAZQBbicAAYsBCQMZAgkBiwgAAUQFvQGUAUQqAAG8ApEBvAwAAQcCbgEHZgAB/wHw
         DAkB8AL/ArwDCQTwBRkB/wQAAfIB7QHrA+0B6wLtAuwBHAQAAfMB7wHtAwcBkgIHAe8BcwEcAbUB/wHw
         AfQB/wEJAf8C8gH/AQkB/wH0AfAB/wK1Af8B8gH0Af8B8AH/AfMB9AH/ARkB/wH0ARkB/wG7AwAB7wHs
         AbwBbQG8AvABbQLwAfcBdAHsAwABBwG8Af8B7wH/AgAB7wIAAfQBegFzAbUB/wEJAfMB/wG7Af8C8QH/
@@ -201,25 +209,27 @@
         AXUBmgEaAhwBGgKaAU0BGgMAAYoMrAGKAgABpgwZAaYCAAFTDHoBUwQAAUwBLAF1AZkCvAEaAZoBTQGa
         BAABswzcAbMCAAGzDNwBswIAAXoMoAF6BAAB7AFMAU0BdQIaAZoBLAGaBQABswLcC7MCAAGzAtwLswIA
         AXoCoAt6AgAB9AHzAbwB8AEaAU0BdQF6ASUBlAYAA7MBCQwAA7MBCQwAA3oBGgwAAfQB8gHxAf8BAAEa
-        AU0BJQF1NwAB9AL/AwABGgGUNwABQgFNAT4HAAE+AwABKAMAAUADAAFAAwABAQEAAQEGAAECFgAD/4UA
-        AfABAAHwBQAB4AEAAeAB2AQAAcABAAHMAYAEAAHAAQABwAEQAfEBgQHxAYUBwAEAAcwBAAGRAQEBkQEB
-        AcABAAHAAQABgAEjAYABKwHAAf8BwAH/AYABIwGAASMBwAH/Ad4B/wGAASMBgAEjAQABPwEAAT8BBAEf
-        AQQBHwEAAT8BAAE/AQQBHwEEAR8BAAE/AQABPwEAAR8BAAEfAQABPwEAAT8BgAE/AYABPwEAAT8BAAE/
-        AYABPwGAAT8BAAE/AQABPwGQAT8BkAE/AQABPwEAAT8B8QH/AfEB/wEAAT8BAAE/Av8B+AEfAQABAQEA
-        AQEC/wHgAQcEAAGAAQEHAAEBBwABAQGAAQEBgAEAAYACAAEBAwABOQEAATkBAAEBAwABCQEAAQkBAAEB
-        AwABCQEAAQkBgAEBAwABAQEAAQEBgAEBAgABAwFhAQMBYQGAAQEDAAFgAQABYAGAAQEBgAEBAQABcAEA
-        AXABgAEBAYACAAF4AQABeAGHAf8BwAUAAv8B4AEBBAAC/wH4ARcGAAb/AgAG/wIAAYABAQGAAQEBgAEB
-        AgABgAEBAQABAQGAAQECAAGAAQEBAAEBAYABAQIAAYABAQEAAQEBgAEBAcABAwGAAQEBAAEBAYABAQHA
-        AQMBgAEBAQABAQGAAQEBgAEBAYABAQGAAQEBgAEBAYABAQGAAQEBgAEBAYABAQHAAQMBgAEBAYABAQGA
-        AQEB4AEHAYABAQGAAQEBgAEBAeABDwGAAQEBgAEBAYABAQGAAR8BhwH/AYcB/wGHAf8BhAE/Bv8BjgF/
-        Bv8L
+        AU0BJQF1NwAB9AL/AwABGgGUNwABQgFNAT4HAAE+AwABKAMAAUADAAFAAwABAQEAAQEGAAECFgAD/wEA
+        AeABBwHgAQcEAAHgAQcB4AEHBAAB4AEHAeABBwQAAcABAwHAAQMEAAGAAQEBgAEBBAABgAEBAYABAQQA
+        AYABAQGAAQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGAAQEBgAEBBAABwAEDAcABAwQA
+        AeABBwHgAQcEAAHwAQ8B8AEPBAAB/AE/AfwBPwQABP8IAAHwAQAB8AUAAeABAAHgAdgEAAHAAQABzAGA
+        BAABwAEAAcABEAHxAYEB8QGFAcABAAHMAQABkQEBAZEBAQHAAQABwAEAAYABIwGAASsBwAH/AcAB/wGA
+        ASMBgAEjAcAB/wHeAf8BgAEjAYABIwEAAT8BAAE/AQQBHwEEAR8BAAE/AQABPwEEAR8BBAEfAQABPwEA
+        AT8BAAEfAQABHwEAAT8BAAE/AYABPwGAAT8BAAE/AQABPwGAAT8BgAE/AQABPwEAAT8BkAE/AZABPwEA
+        AT8BAAE/AfEB/wHxAf8BAAE/AQABPwL/AfgBHwEAAQEBAAEBAv8B4AEHBAABgAEBBwABAQcAAQEBgAEB
+        AYABAAGAAgABAQMAATkBAAE5AQABAQMAAQkBAAEJAQABAQMAAQkBAAEJAYABAQMAAQEBAAEBAYABAQIA
+        AQMBYQEDAWEBgAEBAwABYAEAAWABgAEBAYABAQEAAXABAAFwAYABAQGAAgABeAEAAXgBhwH/AcAFAAL/
+        AeABAQQAAv8B+AEXBgAG/wIABv8CAAGAAQEBgAEBAYABAQIAAYABAQEAAQEBgAEBAgABgAEBAQABAQGA
+        AQECAAGAAQEBAAEBAYABAQHAAQMBgAEBAQABAQGAAQEBwAEDAYABAQEAAQEBgAEBAYABAQGAAQEBgAEB
+        AYABAQGAAQEBgAEBAYABAQGAAQEBwAEDAYABAQGAAQEBgAEBAeABBwGAAQEBgAEBAYABAQHgAQ8BgAEB
+        AYABAQGAAQEBgAEfAYcB/wGHAf8BhwH/AYQBPwb/AY4Bfwb/Cw==
 </value>
   </data>
   <metadata name="RowIcon.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="DataGridViewCellStyle2.NullValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="DataGridViewCellStyle6.NullValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         Qk32AgAAAAAAADYAAAAoAAAADgAAABAAAAABABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACEgoTGw8bGw8bGw8bGw8bGw8bGw8bG
@@ -254,6 +264,42 @@
   </metadata>
   <metadata name="DBS.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>178, 17</value>
+  </metadata>
+  <metadata name="DataGridViewImageColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="DataGridViewCellStyle7.NullValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        Qk32AgAAAAAAADYAAAAoAAAADgAAABAAAAABABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACEgoTGw8bGw8bGw8bGw8bGw8bGw8bG
+        w8bGw8bGw8bGw8bGw8bGw8YAAAAAAISChP///////////////////////////////////////////8bD
+        xgAAAAAAhIKE////////////////////////////////////////////xsPGAAAAAACEgoT/////////
+        ///////////////////////////////////Gw8YAAAAAAISChP//////////////////////////////
+        /////////////8bDxgAAAAAAhIKE////////////AAD/AAD/////////AAD/AAD/////////xsPGAAAA
+        AACEgoT///////////////8AAP8AAP8AAP8AAP/////////////Gw8YAAAAAAISChP//////////////
+        /////wAA/wAA/////////////////8bDxgAAAAAAhIKE////////////////AAD/AAD/AAD/AAD/////
+        ////////xsPGAAAAAACEgoT///////////8AAP8AAP////////8AAP8AAP/////////Gw8YAAAAAAISC
+        hP///////////////////////////////////////////8bDxgAAAAAAhIKE////////////////////
+        ////////////////////////xsPGAAAAAACEgoT/////////////////////////////////////////
+        ///Gw8YAAAAAAISChP///////////////////////////////////////////8bDxgAAAAAAhIKEhIKE
+        hIKEhIKEhIKEhIKEhIKEhIKEhIKEhIKEhIKEhIKEhIKEhIKEAAA=
+</value>
+  </data>
+  <data name="DataGridViewImageColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGtSURBVDhPpZPLLwNRFMbP1qK6txLE+7/gH1FsWFqw
+        8EpIKyEImmg1IhKJnYXEQoSExY2IV7QJVq1QmxLx6rQzPZ9zp9NqZYiw+OX7zjnznZk7ySUA/4KuI63j
+        gvqGbpdeESLy6gUKfI8Mp4EcA5wRMWDeL+N2pw3PDxGwteGKveQy3GIvMKy1MsCrSJ2N4f0m7BrWXC21
+        KIqFmvMLjBVkBCOTV72AOWIvudtqd0W+YJLOg035I7yEkLVZRPY1JLWo1BbW5WivYKRh8BNMfsGbHBP8
+        Bp2l4/kGxYgh+ziL7IMgajpq1w52r+Blpl96NNeo6HCmXrEZlp8WEPwwk4LthVKvZ0UC9gIlWTqYqlNs
+        BGHFB2ElBK1ffXzIoeAHwekg9iVLexO1Cs/TyF33lXPlUOKtkjlLZleytO2vUUj5kYv2gi+EaI+gtcRL
+        P3eh/WeNVAA6S1tj1QrJEeC0EzjpBGtOu/IqFPpFLfSTw9BZ2hyVBfEBlJHQ2u+oUyekdjzrmaCzNNfl
+        7RfUkq9ShToqVKSj8kcW5Jlln0ct+LxKZ+U+kEeo+iMe1yv6e0AfOj7jH9+v9tcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="hMnu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>252, 17</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
